[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://tests/scripts/system_testbed/CombatTimerTestbed.gd" id="1"]
[ext_resource type="Script" path="res://tests/scripts/system_testbed/CombatTimerValidator.gd" id="2"]

[node name="CombatTimer_Testbed" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="LayoutMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0

[node name="Layout" type="VBoxContainer" parent="LayoutMargin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(480, 0)
theme_override_constants/separation = 12

[node name="Header" type="Label" parent="LayoutMargin/Layout"]
layout_mode = 2
size_flags_horizontal = 3
text = "Combat Timer Testbed"
theme_override_font_sizes/font_size = 24

[node name="Description" type="RichTextLabel" parent="LayoutMargin/Layout"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
fit_content = true
scroll_active = false
bbcode_enabled = true
text = "Use these controls to spin up the automated validator, resolve turns one at a time, and inspect the encounter state. The harness mirrors the CI scenario so designers can experiment without scripting."

[node name="Controls" type="HBoxContainer" parent="LayoutMargin/Layout"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="StartButton" type="Button" parent="LayoutMargin/Layout/Controls"]
layout_mode = 2
size_flags_horizontal = 1
text = "Start Demo Encounter"

[node name="ResolveButton" type="Button" parent="LayoutMargin/Layout/Controls"]
layout_mode = 2
size_flags_horizontal = 1
text = "Resolve Active Turn"

[node name="InspectButton" type="Button" parent="LayoutMargin/Layout/Controls"]
layout_mode = 2
size_flags_horizontal = 1
text = "Inspect Encounter State"

[node name="StatusPanel" type="PanelContainer" parent="LayoutMargin/Layout"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StatusLog" type="RichTextLabel" parent="LayoutMargin/Layout/StatusPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_active = true
scroll_following = true

[node name="CombatTimerValidator" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2")
auto_run_on_ready = false

[connection signal="pressed" from="LayoutMargin/Layout/Controls/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="LayoutMargin/Layout/Controls/ResolveButton" to="." method="_on_resolve_button_pressed"]
[connection signal="pressed" from="LayoutMargin/Layout/Controls/InspectButton" to="." method="_on_inspect_button_pressed"]
